# libpath.Rust

./: .gitignore  .rustfmt.toml  .vimrc  CHANGES.md  Cargo.toml  LICENSE  NEWS.md  README.md  TODO.md
.cargo/: config.toml
src/: lib.rs
test/scratch/libver/: main.rs
