
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "Path parsing library (for Rust)"
edition = "2021"
repository = "https://github.com/synesissoftware/libpath.Rust"
license = "BSD-3-Clause"
name = "libpath"
readme = "README.md"
version = "0.0.1"


# ##########################################################
# Targets


# ##########################################################
# Features

[features]


# ##########################################################
# Dependencies

[dependencies]

fastparse = { version = "~0.0", default-features = false, features = [
] }


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

