
# ##########################################################
# Package

[package]

authors = [
  "Matt Wilson <matthew@synesis.com.au>",
]
description = "Path parsing library (for Rust)"
edition = "2021"
repository = "https://github.com/synesissoftware/libpath.Rust"
license = "BSD-3-Clause"
name = "libpath"
readme = "README.md"
version = "0.0.2"


# ##########################################################
# Targets

[lib]
name = "libpath"
path = "src/lib.rs"

[[bin]]
name = "libver"
path = "test/scratch/libver/main.rs"


# ##########################################################
# Features

[features]

default = [
]


# General features:
#
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

null-feature = []


# Crate-specific features:
#


# ##########################################################
# Dependencies

[dependencies]

fastparse = { version = "~0.0", default-features = false, features = [
] }


[dev-dependencies]

test_help-rs = { version = "0.1" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

